Fix nav align

--- a/css/styles.css
+++ b/css/styles.css
@@ -59,18 +59,20 @@ ul {
 	align-items: center;
 	justify-content: space-between;
 	padding-top: 49px;
+	margin-bottom: 5px;
 }
 
 .main-header-nav ul {
 	display: flex;
 	text-decoration: none;
 	color: #111;
+	padding-top: 13px;
 }
 
 .main-header-nav a {
 	font-size: 16px;
 	letter-spacing: 0;
-	line-height: 30px;
+	line-height: 20px;
 	font-weight: 500;
 	text-decoration: none;
 	color: #111;
@@ -107,13 +109,14 @@ ul {
 .main-header-nav .main-header-cart-icon {
 	position: relative;
 	padding-left: 42px;
+	padding-top: 13px;
 }
 
 
 .main-header-cart-icon::before {
 	content: '';
 	position: absolute;
-	top: 8px;
+	top: 14px;
 	left: 2px;
 	width: 15px;
 	height: 15px;
